Added functions to API and js files
