# controllers/Seminars.js
@@ -23,3 +23,14 @@ module.exports.getSeminars = function getSeminars (req, res, next) {
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getLinkedEventsBySeminar = function getLinkedEventsBySeminar (req, res, next) {
+    var seminarId = req.swagger.params['seminarId'].value;
+  Performers.getLinkedEventsBySeminar(seminarId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
